CollMod returns error message with wrong field

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QE 2022-07-25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See below, I think we should use `kTimeseriesFieldName` instead of `kIsTimeseriesNamespaceFieldName` here. `kIsTimeseriesNamespaceFieldName` is an internal flag and should be reported to the user.

      https://github.com/10gen/mongo/blob/6af105aa73b7e3ed88186a14a5e832434af65863/src/mongo/db/catalog/coll_mod.cpp#L545

            Assignee:
            Rui Liu
            Reporter:
            Rui Liu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: