SERVER-68127 Correct the field name in the error reporting of collMod parsing